remove the roleId to role key