@@ -29,8 +29,10 @@ import org.dromara.system.domain.SysRoleMenu;
 import org.dromara.system.domain.SysUserRole;
 import org.dromara.system.domain.bo.SysRoleBo;
 import org.dromara.system.domain.vo.SysRoleVo;
+import org.dromara.system.domain.vo.SysUserVo;
 import org.dromara.system.mapper.SysRoleMapper;
 import org.dromara.system.mapper.SysRoleMenuMapper;
+import org.dromara.system.mapper.SysUserMapper;
 import org.dromara.system.mapper.SysUserRoleMapper;
 import org.dromara.system.service.ISysRoleService;
 import org.springframework.cache.annotation.CacheEvict;
@@ -52,6 +54,7 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
     private final SysRoleMapper baseMapper;
     private final SysRoleMenuMapper roleMenuMapper;
     private final SysUserRoleMapper userRoleMapper;
+    private final SysUserMapper userMapper;
 
     @Override
     public TableDataInfo<SysRoleVo> selectPageRoleList(SysRoleBo role, PageQuery pageQuery) {
@@ -73,11 +76,9 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
     private Wrapper<SysRole> buildQueryWrapper(SysRoleBo bo) {
         Map<String, Object> params = bo.getParams();
         QueryWrapper<SysRole> wrapper = Wrappers.query();
-        wrapper.eq("r.del_flag", SystemConstants.NORMAL)
-            .eq(ObjectUtil.isNotNull(bo.getRoleId()), "r.role_id", bo.getRoleId())
+        wrapper.eq(ObjectUtil.isNotNull(bo.getRoleKey()), "r.role_Key", bo.getRoleKey())
             .like(StringUtils.isNotBlank(bo.getRoleName()), "r.role_name", bo.getRoleName())
             .eq(StringUtils.isNotBlank(bo.getStatus()), "r.status", bo.getStatus())
-            .like(StringUtils.isNotBlank(bo.getRoleKey()), "r.role_key", bo.getRoleKey())
             .between(params.get("beginTime") != null && params.get("endTime") != null,
                 "r.create_time", params.get("beginTime"), params.get("endTime"))
             .orderByAsc("r.role_sort").orderByAsc("r.create_time");
@@ -91,7 +92,7 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
      * @return 角色列表
      */
     @Override
-    public List<SysRoleVo> selectRolesByUserId(Long userId) {
+    public SysRoleVo selectRolesByUserId(Long userId) {
         return baseMapper.selectRolesByUserId(userId);
     }
 
@@ -102,17 +103,18 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
      * @return 角色列表
      */
     @Override
-    public List<SysRoleVo> selectRolesAuthByUserId(Long userId) {
-        List<SysRoleVo> userRoles = baseMapper.selectRolesByUserId(userId);
+    public SysRoleVo selectRolesAuthByUserId(Long userId) {
+        SysRoleVo userRoles = baseMapper.selectRolesByUserId(userId);
         List<SysRoleVo> roles = selectRoleAll();
         // 使用HashSet提高查找效率
-        Set<Long> userRoleIds = StreamUtils.toSet(userRoles, SysRoleVo::getRoleId);
+
         for (SysRoleVo role : roles) {
-            if (userRoleIds.contains(role.getRoleId())) {
+            if (userRoles.getRoleKey().contains(role.getRoleKey())) {
                 role.setFlag(true);
             }
         }
-        return roles;
+
+        return roles.get(0);
     }
 
     /**
@@ -122,22 +124,16 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
      * @return 权限列表
      */
     @Override
-    public Set<String> selectRolePermissionByUserId(Long userId) {
-        List<SysRoleVo> perms = baseMapper.selectRolesByUserId(userId);
-        Set<String> permsSet = new HashSet<>();
-        for (SysRoleVo perm : perms) {
-            if (ObjectUtil.isNotNull(perm)) {
-                permsSet.addAll(StringUtils.splitList(perm.getRoleKey().trim()));
-            }
-        }
-        return permsSet;
+    public String selectRolePermissionByUserId(Long userId) {
+
+        return baseMapper.selectRolesByUserId(userId).getRoleKey();
     }
 
-    /**
-     * 查询所有角色
-     *
-     * @return 角色列表
-     */
+        /**
+         * 查询所有角色
+         *
+         * @return 角色列表
+         */
     @Override
     public List<SysRoleVo> selectRoleAll() {
         return this.selectRoleList(new SysRoleBo());
@@ -150,51 +146,34 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
      * @return 选中角色ID列表
      */
     @Override
-    public List<Long> selectRoleListByUserId(Long userId) {
-        List<SysRoleVo> list = baseMapper.selectRolesByUserId(userId);
-        return StreamUtils.toList(list, SysRoleVo::getRoleId);
+    public String selectRoleListByUserId(Long userId) {
+        SysRoleVo role = baseMapper.selectRolesByUserId(userId);
+        return role.getRoleKey();
     }
 
     /**
      * 通过角色ID查询角色
      *
-     * @param roleId 角色ID
+     * @param roleKey 角色ID
      * @return 角色对象信息
      */
     @Override
-    public SysRoleVo selectRoleById(Long roleId) {
-        return baseMapper.selectRoleById(roleId);
+    public SysRoleVo selectRoleByKey(String roleKey) {
+        return baseMapper.selectRoleByRoleKey(roleKey);
     }
 
-    /**
-     * 通过角色ID串查询角色
-     *
-     * @param roleIds 角色ID串
-     * @return 角色列表信息
-     */
+
     @Override
-    public List<SysRoleVo> selectRoleByIds(List<Long> roleIds) {
-        QueryWrapper<SysRole> qw = new QueryWrapper<SysRole>()
-            .eq("r.status", SystemConstants.NORMAL);
-        if(CollUtil.isNotEmpty(roleIds)){
-            qw.in(CollUtil.isNotEmpty(roleIds), "r.role_id", roleIds);
-        }
-        List<SysRoleVo> roleList=baseMapper.selectRoleList(qw);
-
-
-        Long userId = LoginHelper.getUserId();
-        SysRole role = baseMapper.selectById(userId);
-        Long roleId = role.getRoleId();
-        if (roleId == 1){
-            roleList = roleList.stream()
-                .filter(r-> r.getRoleId() == 2|| r.getRoleId() == 3|| r.getRoleId() == 4)
-                .collect(Collectors.toList());
-        }else if(roleId == 2){
-            roleList = roleList.stream()
-                .filter(r-> r.getRoleId() == 3|| r.getRoleId() == 4)
-                .collect(Collectors.toList());
-        }else {
-            roleList=Collections.emptyList();
+    public List<SysRoleVo> selectRoleByKeys() {
+        Long usrId = LoginHelper.getUserId();
+        SysUserVo mainUser =userMapper.selectMainUserByUserId(usrId);
+        SysRoleVo userRole = baseMapper.selectRolesByUserId(mainUser.getUserId());
+        List<SysRoleVo> roleList =baseMapper.selectRoleList(new LambdaQueryWrapper<SysRole>()
+            .select(SysRole::getRoleKey, SysRole::getRoleName)
+            .eq(SysRole::getStatus, "A")
+            .ne(SysRole::getRoleKey,"SA"));
+        if(!userRole.isSuperAdmin()){
+              roleList = roleList.stream().filter(r->StringUtils.containsAny(r.getRoleKey(),"CPY")).toList();
         }
         return roleList;
     }
@@ -209,7 +188,7 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
     public boolean checkRoleNameUnique(SysRoleBo role) {
         boolean exist = baseMapper.exists(new LambdaQueryWrapper<SysRole>()
             .eq(SysRole::getRoleName, role.getRoleName())
-            .ne(ObjectUtil.isNotNull(role.getRoleId()), SysRole::getRoleId, role.getRoleId()));
+            .ne(ObjectUtil.isNotNull(role.getRoleKey()), SysRole::getRoleKey, role.getRoleKey()));
         return !exist;
     }
 
@@ -223,7 +202,7 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
     public boolean checkRoleKeyUnique(SysRoleBo role) {
         boolean exist = baseMapper.exists(new LambdaQueryWrapper<SysRole>()
             .eq(SysRole::getRoleKey, role.getRoleKey())
-            .ne(ObjectUtil.isNotNull(role.getRoleId()), SysRole::getRoleId, role.getRoleId()));
+            .ne(ObjectUtil.isNotNull(role.getRoleKey()), SysRole::getRoleKey, role.getRoleKey()));
         return !exist;
     }
 
@@ -234,58 +213,15 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
      */
     @Override
     public void checkRoleAllowed(SysRoleBo role) {
-        if (ObjectUtil.isNotNull(role.getRoleId()) && LoginHelper.isSuperAdmin(role.getRoleId())) {
+        if (ObjectUtil.isNotNull(role.getRoleKey()) && role.isSuperAdmin()) {
             throw new ServiceException("不允许操作超级管理员角色");
         }
-        String[] keys = new String[]{RoleConstants.SUPER_ADMIN_ROLE_KEY};
-        // 新增不允许使用 管理员标识符
-        if (ObjectUtil.isNull(role.getRoleId())
-            && StringUtils.equalsAny(role.getRoleKey(), keys)) {
-            throw new ServiceException("不允许使用系统内置管理员角色标识符!");
-        }
-        // 修改不允许修改 管理员标识符
-        if (ObjectUtil.isNotNull(role.getRoleId())) {
-            SysRole sysRole = baseMapper.selectById(role.getRoleId());
-            // 如果标识符不相等 判断为修改了管理员标识符
-            if (!StringUtils.equals(sysRole.getRoleKey(), role.getRoleKey())) {
-                if (StringUtils.equalsAny(sysRole.getRoleKey(), keys)) {
-                    throw new ServiceException("不允许修改系统内置管理员角色标识符!");
-                } else if (StringUtils.equalsAny(role.getRoleKey(), keys)) {
-                    throw new ServiceException("不允许使用系统内置管理员角色标识符!");
-                }
-            }
-        }
     }
 
-    /**
-     * 校验角色是否有数据权限
-     *
-     * @param roleId 角色id
-     */
-    @Override
-    public void checkRoleDataScope(Long roleId) {
-        if (ObjectUtil.isNull(roleId)) {
-            return;
-        }
-        if (LoginHelper.isSuperAdmin()) {
-            return;
-        }
-        List<SysRoleVo> roles = this.selectRoleList(new SysRoleBo(roleId));
-        if (CollUtil.isEmpty(roles)) {
-            throw new ServiceException("没有权限访问角色数据！");
-        }
 
-    }
-
-    /**
-     * 通过角色ID查询角色使用数量
-     *
-     * @param roleId 角色ID
-     * @return 结果
-     */
     @Override
-    public long countUserRoleByRoleId(Long roleId) {
-        return userRoleMapper.selectCount(new LambdaQueryWrapper<SysUserRole>().eq(SysUserRole::getRoleId, roleId));
+    public long countUserRoleByRoleKey(String roleKey) {
+        return userRoleMapper.selectCount(new LambdaQueryWrapper<SysUserRole>().eq(SysUserRole::getRoleKey, roleKey));
     }
 
     /**
@@ -300,7 +236,7 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
         SysRole role = MapstructUtils.convert(bo, SysRole.class);
         // 新增角色信息
         baseMapper.insert(role);
-        bo.setRoleId(role.getRoleId());
+        bo.setRoleKey(role.getRoleKey());
         return insertRoleMenu(bo);
     }
 
@@ -315,32 +251,26 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
     public int updateRole(SysRoleBo bo) {
         SysRole role = MapstructUtils.convert(bo, SysRole.class);
 
-        if (SystemConstants.DISABLE.equals(role.getStatus()) && this.countUserRoleByRoleId(role.getRoleId()) > 0) {
+        if (SystemConstants.DISABLE.equals(role.getStatus()) && this.countUserRoleByRoleKey(role.getRoleKey()) > 0) {
             throw new ServiceException("角色已分配，不能禁用!");
         }
         // 修改角色信息
         baseMapper.updateById(role);
         // 删除角色与菜单关联
-        roleMenuMapper.delete(new LambdaQueryWrapper<SysRoleMenu>().eq(SysRoleMenu::getRoleId, role.getRoleId()));
+        roleMenuMapper.delete(new LambdaQueryWrapper<SysRoleMenu>().eq(SysRoleMenu::getRoleKey, role.getRoleKey()));
         return insertRoleMenu(bo);
     }
 
-    /**
-     * 修改角色状态
-     *
-     * @param roleId 角色ID
-     * @param status 角色状态
-     * @return 结果
-     */
+
     @Override
-    public int updateRoleStatus(Long roleId, String status) {
-        if (SystemConstants.DISABLE.equals(status) && this.countUserRoleByRoleId(roleId) > 0) {
+    public int updateRoleStatus(String roleKey, String status) {
+        if (SystemConstants.DISABLE.equals(status) && this.countUserRoleByRoleKey(roleKey) > 0) {
             throw new ServiceException("角色已分配，不能禁用!");
         }
         return baseMapper.update(null,
             new LambdaUpdateWrapper<SysRole>()
                 .set(SysRole::getStatus, status)
-                .eq(SysRole::getRoleId, roleId));
+                .eq(SysRole::getRoleKey, roleKey));
     }
 
     /**
@@ -371,11 +301,11 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
         List<SysRoleMenu> list = new ArrayList<>();
         for (Long menuId : role.getMenuIds()) {
             SysRoleMenu rm = new SysRoleMenu();
-            rm.setRoleId(role.getRoleId());
+            rm.setRoleKey(role.getRoleKey());
             rm.setMenuId(menuId);
             list.add(rm);
         }
-        if (list.size() > 0) {
+        if (!list.isEmpty()) {
             rows = roleMenuMapper.insertBatch(list) ? list.size() : 0;
         }
         return rows;
@@ -383,43 +313,32 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
 
 
 
-    /**
-     * 通过角色ID删除角色
-     *
-     * @param roleId 角色ID
-     * @return 结果
-     */
-    @CacheEvict(cacheNames = CacheNames.SYS_ROLE_CUSTOM, key = "#roleId")
+
+    @CacheEvict(cacheNames = CacheNames.SYS_ROLE_CUSTOM, key = "#roleKey")
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public int deleteRoleById(Long roleId) {
+    public int deleteRoleByKey(String roleKey) {
         // 删除角色与菜单关联
-        roleMenuMapper.delete(new LambdaQueryWrapper<SysRoleMenu>().eq(SysRoleMenu::getRoleId, roleId));
-        return baseMapper.deleteById(roleId);
+        roleMenuMapper.delete(new LambdaQueryWrapper<SysRoleMenu>().eq(SysRoleMenu::getRoleKey, roleKey));
+        return baseMapper.deleteById(roleKey);
     }
 
-    /**
-     * 批量删除角色信息
-     *
-     * @param roleIds 需要删除的角色ID
-     * @return 结果
-     */
+
     @CacheEvict(cacheNames = CacheNames.SYS_ROLE_CUSTOM, allEntries = true)
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public int deleteRoleByIds(Long[] roleIds) {
-        for (Long roleId : roleIds) {
-            SysRole role = baseMapper.selectById(roleId);
+    public int deleteRoleByKeys(String[] roleKeys) {
+        for (String roleKey : roleKeys) {
+            SysRole role = baseMapper.selectById(roleKey);
             checkRoleAllowed(BeanUtil.toBean(role, SysRoleBo.class));
-            checkRoleDataScope(roleId);
-            if (countUserRoleByRoleId(roleId) > 0) {
+            if (countUserRoleByRoleKey(roleKey) > 0) {
                 throw new ServiceException(String.format("%1$s已分配，不能删除!", role.getRoleName()));
             }
         }
-        List<Long> ids = Arrays.asList(roleIds);
+        List<String> keys = Arrays.asList(roleKeys);
         // 删除角色与菜单关联
-        roleMenuMapper.delete(new LambdaQueryWrapper<SysRoleMenu>().in(SysRoleMenu::getRoleId, ids));
-        return baseMapper.deleteByIds(ids);
+        roleMenuMapper.delete(new LambdaQueryWrapper<SysRoleMenu>().in(SysRoleMenu::getRoleKey, keys));
+        return baseMapper.deleteByIds(keys);
     }
 
     /**
@@ -431,7 +350,7 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
     @Override
     public int deleteAuthUser(SysUserRole userRole) {
         int rows = userRoleMapper.delete(new LambdaQueryWrapper<SysUserRole>()
-            .eq(SysUserRole::getRoleId, userRole.getRoleId())
+            .eq(SysUserRole::getRoleKey, userRole.getRoleKey())
             .eq(SysUserRole::getUserId, userRole.getUserId()));
         if (rows > 0) {
             cleanOnlineUser(List.of(userRole.getUserId()));
@@ -439,18 +358,12 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
         return rows;
     }
 
-    /**
-     * 批量取消授权用户角色
-     *
-     * @param roleId  角色ID
-     * @param userIds 需要取消授权的用户数据ID
-     * @return 结果
-     */
+
     @Override
-    public int deleteAuthUsers(Long roleId, Long[] userIds) {
+    public int deleteAuthUsers(String roleKey, Long[] userIds) {
         List<Long> ids = List.of(userIds);
         int rows = userRoleMapper.delete(new LambdaQueryWrapper<SysUserRole>()
-            .eq(SysUserRole::getRoleId, roleId)
+            .eq(SysUserRole::getRoleKey, roleKey)
             .in(SysUserRole::getUserId, ids));
         if (rows > 0) {
             cleanOnlineUser(ids);
@@ -458,22 +371,16 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
         return rows;
     }
 
-    /**
-     * 批量选择授权用户角色
-     *
-     * @param roleId  角色ID
-     * @param userIds 需要授权的用户数据ID
-     * @return 结果
-     */
+
     @Override
-    public int insertAuthUsers(Long roleId, Long[] userIds) {
+    public int insertAuthUsers(String roleKey, Long[] userIds) {
         // 新增用户与角色管理
         int rows = 1;
         List<Long> ids = List.of(userIds);
         List<SysUserRole> list = StreamUtils.toList(ids, userId -> {
             SysUserRole ur = new SysUserRole();
             ur.setUserId(userId);
-            ur.setRoleId(roleId);
+            ur.setRoleKey(roleKey);
             return ur;
         });
         if (CollUtil.isNotEmpty(list)) {
@@ -486,9 +393,9 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
     }
 
     @Override
-    public void cleanOnlineUserByRole(Long roleId) {
+    public void cleanOnlineUserByRole(String roleKey) {
         // 如果角色未绑定用户 直接返回
-        Long num = userRoleMapper.selectCount(new LambdaQueryWrapper<SysUserRole>().eq(SysUserRole::getRoleId, roleId));
+        Long num = userRoleMapper.selectCount(new LambdaQueryWrapper<SysUserRole>().eq(SysUserRole::getRoleKey, roleKey));
         if (num == 0) {
             return;
         }
@@ -504,10 +411,10 @@ public class SysRoleServiceImpl implements ISysRoleService, RoleService {
                 return;
             }
             LoginUser loginUser = LoginHelper.getLoginUser(token);
-            if (ObjectUtil.isNull(loginUser) || CollUtil.isEmpty(loginUser.getRoles())) {
+            if (ObjectUtil.isNull(loginUser) || ObjectUtil.isNull(loginUser.getRoles())) {
                 return;
             }
-            if (loginUser.getRoles().stream().anyMatch(r -> r.getRoleId().equals(roleId))) {
+            if (StringUtils.equals(loginUser.getRoles().getRoleKey(),roleKey)) {
                 try {
                     StpUtil.logoutByTokenValue(token);
                 } catch (NotLoginException ignored) {
